--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "sea_of_steves.sln"
+    "dotnet.defaultSolution": "IGDA_GAME_JAM.sln"
 }
